Changed font for headings. Fixed z-index issue between coverflow and player

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -55,3 +55,9 @@ video {
   font-family: 'pocket-calculator';
   src: url('/pocket_calcuatlor_ot.otf');
 }
+
+@font-face {
+  font-family: 'pilot-command';
+  src: url('/PilotCommand-3zn93.otf');
+}
+
